--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,11 +1,11 @@
 name: ${project.name}
 version: ${project.version}
 main: com.lenis0012.bukkit.marriage2.internal.MarriagePlugin
-author: lenis0012
-description: A plugin wich provides the function to start a relationship in minecraft.
+author: ["lenis0012", "Aduhkiss"]
+description: A plugin which provides the function to start a relationship in minecraft. (Custom Wispwood build)
 website: https://www.spigotmc.org/resources/marriage-reloaded-1-15-1-8.18998/
 softdepend: [Vault, PlotSquared]
-api-version: '1.13'
+api-version: '1.21'
 manifest-url: ${updater.manifestUrl}
 commands:
   marry:
